# annotated

./: .dockerignore  .gitignore  CODEX-BRIEF.md  CODEX-WORK-13-05-PLAN.md  Dockerfile  PROJECT-PLAN.md  README.md  fly.toml  package-lock.json  package.json
Style CSS template/: README.md  annotated-editorial-template.css
apps/desktop/: index.html  package.json  vite.config.js
apps/desktop/src/: App.jsx  main.jsx
apps/desktop/src-tauri/: Cargo.toml  Info.plist  build.rs  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/native/: AnnotatedCapture.swift
apps/desktop/src-tauri/src/: main.rs
apps/desktop/src/components/: AccessibilityPrompt.jsx  AnnotationRow.jsx  CaptureController.jsx  Composer.jsx  DetailView.jsx  FeedView.jsx  LibraryView.jsx  ProfileView.jsx  PublicAnnotationCard.jsx  QuickClipOverlay.jsx  QuickClipWindow.jsx  SettingsView.jsx  SourceType.jsx  UserAvatar.jsx
apps/desktop/src/db/: schema.cjs
apps/desktop/src/lib/: detect.js  localStore.js
apps/desktop/src/styles/: global.css
apps/extension/: manifest.json  package.json  sidepanel.html
apps/extension/scripts/: validate-extension.mjs
apps/extension/src/: auth-bridge.js  background.js  content.css  content.js  sidepanel.js
apps/web/: index.html  package-lock.json  package.json  vite.config.js
apps/web/src/: App.jsx  main.jsx
apps/web/src/components/: ActionBar.jsx  ActionRow.jsx  AnnotationCard.jsx  AnnotationItem.jsx  (+10 more)
docs/: CLAIM-OUTCOME-EMAIL-DRAFT.md  CODEX-SPEC.md  FLY-DEPLOY-PLAN.md
(+17 files in other folders)
